--- a/app/globals.scss
+++ b/app/globals.scss
@@ -5,7 +5,7 @@ $dark: #1C1F33;
 $primary: #2a4494ff;
 $light: #e0f2e9ff;
 
-$pad: 10px;
+$pad: 12px;
 
 :export {
     dark: $dark;
